--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -130,19 +130,19 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Fetch all review comments
+          # Fetch all review comments for this PR
           COMMENTS=$(gh api repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/comments)
-  
-          # Count unresolved comments
-          UNRESOLVED_COUNT=$(echo "$COMMENTS" | jq '[.[] | select(.resolved == false)] | length')
-  
+
+          # Find unresolved comments (i.e., not outdated and not replied to)
+          UNRESOLVED_COUNT=$(echo "$COMMENTS" | jq '[.[] | select(.in_reply_to_id == null and .position != null)] | length')
+
           echo "🔍 Unresolved Comments: $UNRESOLVED_COUNT"
-  
+
           # Fail workflow if unresolved comments exist
           if [ "$UNRESOLVED_COUNT" -gt 0 ]; then
             echo "❌ PR has unresolved comments. Please resolve them before merging."
             exit 1
           fi
-  
+
           echo "✅ No unresolved comments found!"
           
